# voice-memos

./: .gitignore  CLAUDE.md  pyproject.toml
plans/: 001-v1-implementation.md  index.md
plans/active/: 001-v1-implementation.md  002-output-path-obsidian.md  003-date-grouped-markdown.md
src/: transcribe.py
tests/: smoke.py  test_transcribe.py
tests/e2e/: smoke.py  test_smoke.py
tests/e2e/fixtures/smoke/: Carkeek Park 10.m4a  Carkeek Park 11.m4a  memo_2026-04-08 10.15.00_47.71464468712184_-122.373724393098.m4a
tests/fixtures/smoke/: memo_2026-04-09 17.47.13_47.71463839736928_-122.373747134786.m4a
tests/unit/: test_transcribe.py
