[project]
name = "voice-memos"
version = "0.1.0"
description = "Transcribe iCloud voice memos into a markdown file."
requires-python = ">=3.12"
dependencies = ["groq>=0.11.0", "httpx[socks]>=0.27"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers -m 'not e2e'"
markers = [
    "e2e: hits the real Groq API (requires GROQ_API_KEY, costs money). Opt in with -m e2e.",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
ignore = ["**"]
